// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCategories: Component should render correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Tag Categories"
  />
  <ProjectBreadcrumbs
    items={
      Array [
        Object {
          "h3": "project title",
          "path": "/project/1/",
          "span": <FormattedMessage
            defaultMessage="Project"
            id="shared.components.projectBreadcrumbs.project"
            values={Object {}}
          />,
        },
        Object {
          "h3": <FormattedMessage
            defaultMessage="Templates"
            id="shared.components.projectBreadcrumbs.templates"
            values={Object {}}
          />,
          "path": "/project/1/templates",
          "span": <FormattedMessage
            defaultMessage="Tab"
            id="shared.components.projectBreadcrumbs.tab"
            values={Object {}}
          />,
        },
        Object {
          "active": true,
          "h3": <FormattedMessage
            defaultMessage="Tags Template"
            id="shared.components.projectBreadcrumbs.tagsTemplate"
            values={Object {}}
          />,
          "path": "/project/1/tags-templates",
          "span": <FormattedMessage
            defaultMessage="Tags"
            id="shared.components.projectBreadcrumbs.tags"
            values={Object {}}
          />,
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Tag"
        id="project.tagCategories.title"
        values={Object {}}
      />
    }
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        key="0"
      >
        <Styled(H1)
          id="tag-category-1"
          onClick={[Function]}
        >
          Colors
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        key="1"
      >
        <Styled(H1)
          id="tag-category-2"
          onClick={[Function]}
        >
          Countries
        </Styled(H1)>
      </Styled(Component)>
    </styled.section>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackArrowButton
        hideOnDesktop={true}
        id="backBtn"
        onClick={[Function]}
      />
      <PlusButton
        customStyles={Object {}}
        hideOnDesktop={true}
        onClick={[Function]}
      />
    </NavigationContainer>
  </LoadingWrapper>
</Fragment>
`;

exports[`TagCategories: Component should render correctly when no categories 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Tag Categories"
  />
  <ProjectBreadcrumbs
    items={
      Array [
        Object {
          "h3": "project title",
          "path": "/project/1/",
          "span": <FormattedMessage
            defaultMessage="Project"
            id="shared.components.projectBreadcrumbs.project"
            values={Object {}}
          />,
        },
        Object {
          "h3": <FormattedMessage
            defaultMessage="Templates"
            id="shared.components.projectBreadcrumbs.templates"
            values={Object {}}
          />,
          "path": "/project/1/templates",
          "span": <FormattedMessage
            defaultMessage="Tab"
            id="shared.components.projectBreadcrumbs.tab"
            values={Object {}}
          />,
        },
        Object {
          "active": true,
          "h3": <FormattedMessage
            defaultMessage="Tags Template"
            id="shared.components.projectBreadcrumbs.tagsTemplate"
            values={Object {}}
          />,
          "path": "/project/1/tags-templates",
          "span": <FormattedMessage
            defaultMessage="Tags"
            id="shared.components.projectBreadcrumbs.tags"
            values={Object {}}
          />,
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Tag"
        id="project.tagCategories.title"
        values={Object {}}
      />
    }
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        key="0"
      >
        <Styled(H1)
          id="tag-category-1"
          onClick={[Function]}
        >
          Colors
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        key="1"
      >
        <Styled(H1)
          id="tag-category-2"
          onClick={[Function]}
        >
          Countries
        </Styled(H1)>
      </Styled(Component)>
    </styled.section>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackArrowButton
        hideOnDesktop={true}
        id="backBtn"
        onClick={[Function]}
      />
      <PlusButton
        customStyles={Object {}}
        hideOnDesktop={true}
        onClick={[Function]}
      />
    </NavigationContainer>
  </LoadingWrapper>
</Fragment>
`;

exports[`TagCategories: Component should render correctly with loader 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Tag Categories"
  />
  <ProjectBreadcrumbs
    items={
      Array [
        Object {
          "h3": "project title",
          "path": "/project/1/",
          "span": <FormattedMessage
            defaultMessage="Project"
            id="shared.components.projectBreadcrumbs.project"
            values={Object {}}
          />,
        },
        Object {
          "h3": <FormattedMessage
            defaultMessage="Templates"
            id="shared.components.projectBreadcrumbs.templates"
            values={Object {}}
          />,
          "path": "/project/1/templates",
          "span": <FormattedMessage
            defaultMessage="Tab"
            id="shared.components.projectBreadcrumbs.tab"
            values={Object {}}
          />,
        },
        Object {
          "active": true,
          "h3": <FormattedMessage
            defaultMessage="Tags Template"
            id="shared.components.projectBreadcrumbs.tagsTemplate"
            values={Object {}}
          />,
          "path": "/project/1/tags-templates",
          "span": <FormattedMessage
            defaultMessage="Tags"
            id="shared.components.projectBreadcrumbs.tags"
            values={Object {}}
          />,
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Categories"
        id="project.tagCategories.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Tag"
        id="project.tagCategories.title"
        values={Object {}}
      />
    }
  >
    <PlusButton
      customStyles={Object {}}
      hideOnDesktop={false}
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        key="0"
      >
        <Styled(H1)
          id="tag-category-1"
          onClick={[Function]}
        >
          Colors
        </Styled(H1)>
      </Styled(Component)>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{count, plural,one {# Tag} other {# Tags}}"
            id="project.tagCategories.tagsCounter"
            values={
              Object {
                "count": 4,
              }
            }
          />
        }
        headerComponent={
          <CardHeader
            list={
              Array [
                "in 5 months",
                "createdBy",
              ]
            }
          />
        }
        key="1"
      >
        <Styled(H1)
          id="tag-category-2"
          onClick={[Function]}
        >
          Countries
        </Styled(H1)>
      </Styled(Component)>
    </styled.section>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackArrowButton
        hideOnDesktop={true}
        id="backBtn"
        onClick={[Function]}
      />
      <PlusButton
        customStyles={Object {}}
        hideOnDesktop={true}
        onClick={[Function]}
      />
    </NavigationContainer>
  </LoadingWrapper>
</Fragment>
`;
